--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
-*{
-    margin: 0;
-    padding: 0;
-}
 body{
     font-family: 'Rubik', sans-serif;
+}
+.active{
+    display: block;
 }
 .header{
     display: flex;
@@ -11,12 +10,25 @@ body{
     align-items: center;
     margin: 33px 100px;
 }
+
 .menu-item{
     text-decoration: none;
     margin-right: 47px;
     font-size: 16px;
     line-height: 19px;
     color: #4E5983;
+}
+.logo{
+    flex: 0.4;
+}
+.topnav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex: 0.6;
+}
+.menu-icon{
+    display: none;
 }
 .login-button{
     font-size: 16px;
@@ -31,7 +43,7 @@ body{
     font-size: 16px;
     font-weight: 500;
     line-height: 19px;
-    text-align: center;
+    text-align: center; 
     color: #4E5983;
     border: none;
     background: #A17FFF 0.11;
@@ -39,6 +51,10 @@ body{
     padding: 20px 14px;
 }
 .container{
+    width: 80%;
+    margin: auto;
+}
+.calculator-container{
     width: 80%;
     margin: auto;
 }
@@ -60,18 +76,15 @@ body{
 }
 .calculator{
     display: flex;
+    flex-wrap: wrap;
     background: #FFFFFF;
     border: 4px solid #F7F8FD;
     box-sizing: border-box;
     border-radius: 26px;
-    flex: 0.8;
-    justify-content: center;
-    margin-bottom: 120px;
+    justify-content: space-around;
+    align-items: flex-end;
 }
-.you-give{
-    margin-right: 70px;
-    margin-bottom: 70px;
-}
+
 .calc-title{
     font-weight: 500;
     font-size: 18px;
@@ -115,6 +128,11 @@ body{
     line-height: 24px;
     letter-spacing: 0.015e;
     color: #094067;
+    -moz-appearance:textfield;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
 }
 ::-webkit-input-placeholder {
     font-size: 20px;
@@ -140,18 +158,22 @@ body{
       padding: 0 10px;
   }
   .set-valute{
+    background: url(../img/arr_down.png) no-repeat right center;
+    padding-right: 15px;
     border: none;
     color: #094067;
     font-weight: 300;
     font-size: 16px;
     line-height: 19px;
+    -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   }
   .change-icon{
       margin-left: 50px;
   }
   .change-button{
-    
-    margin-left: 50px;
+    height: 60px;
     padding: 20px 28px;
     background: linear-gradient(163.94deg, #562EC2 29.59%, #A07EFE 73.59%);
     opacity: 0.8;
@@ -167,12 +189,11 @@ body{
 .advantages{
     display: flex;
     justify-content: space-between;
-    position: relative;
 }
 .card{
     flex: 0.25;
     margin-top: 80px;
-    margin-bottom: 250px;
+    margin-bottom: 100px;
 }
 .card-image{
     width: 150px;
@@ -194,25 +215,24 @@ body{
     opacity: 0.7;
 }
 
-
-.exchange{
+.exchange-container{
     background: linear-gradient(180deg, #EFF2FA 0%, rgba(255, 255, 255, 0) 96.57%);
     opacity: 0.8;
-    position: relative;
-    height: 400px;
-    
+    width: 100%;
+
+}
+.exchange{
+    width: 80%;
+    margin: 0 auto;
 }
 .exchange-contant{
-    width: 90%;
-    position: absolute;
-    left: 5%;
-    top: -170px;
+    border-radius: 26px;
     display: flex;
+    justify-content: space-around;
     align-items: center;
     background-color: #fff;
     border: 4px solid #F7F8FD;
     box-sizing: border-box;
-    border-radius: 26px;
     -webkit-box-shadow: 0px 13px 5px -6px #EFF2FA;
     -moz-box-shadow: 0px 13px 5px -6px #EFF2FA;
     box-shadow: 0px 13px 5px -6px #EFF2FA;
@@ -242,18 +262,22 @@ body{
     line-height: 111.9%;
     text-align: center;
     color: #160647;
+    margin-top: 100px;
     margin-bottom: 80px;
 }
 .valute-cards{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .valute-card{
     display: flex;
-    width: 300px;
+    width: 245px;
     margin-bottom: 60px;    
     align-items: center;
+}
+.valute-btn{
+    display: none;
 }
 
 .valute-icon{
@@ -286,6 +310,9 @@ body{
 }
 .review-card{
     flex: 0.45;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .review-text{
     font-size: 18px;
@@ -294,6 +321,9 @@ body{
     opacity: 0.7;
     margin-bottom: 40px;
 }
+.name-date{
+    margin-top: 20px;
+}
 .name{
     font-size: 20px;
     line-height: 155.5%;
@@ -301,6 +331,7 @@ body{
     margin-right: 25px;
     margin-bottom: 140px;   
 }
+
 .date{
     font-size: 14px;
     line-height: 17px;
@@ -383,12 +414,430 @@ body{
     color: #838BA8;
 }
 .footer-item{
-    margin-left: 60px;
+    margin-left: 40px;
     font-size: 14px;
     line-height: 17px;
     color: #4E5983;
     text-decoration: none;
 }
 .social-img{
-    margin-left: 50px;
+    margin-left: 30px;
+}
+
+@media (max-width: 1250px){
+    .container{
+        width: 90%;
+    }
+    .header{
+        margin: 30px 40px;
+    }
+    .calculator-container{
+        width: 50%;
+    }
+    .calculator{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .change-button{
+        margin-top: 20px;
+    }
+    .change-icon{
+        margin: 0;
+        margin-top: 20px;
+    }
+    .card{
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+    .title{
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .you-give{
+        margin: 0;
+        
+    }
+    .calc-title{
+        margin: 0;
+        margin-top: 30px;
+    }
+
+    .exchange{
+        width: 90%;
+    }
+    .exchange-image img{
+        width: 500px;
+    }
+    .exchange-title{
+        margin-top: 50px;
+        font-size: 30px;
+    }
+    .exchange-p{
+        margin-bottom: 50px;
+    }
+    .reserve-title{
+        margin-top: 50px;
+        margin-bottom: 50px;
+        font-size: 30px;
+        }
+    .valute-card{
+        width: 220px;
+        margin-bottom: 30px;
+    }
+    .valute-name{
+        font-size: 14px;
+    }
+    .valute-price{
+        font-size: 16px;
+    }
+    .review-title{
+        margin-top: 50px;
+        margin-bottom: 50px;
+        font-size: 30px;
+    }
+    
+    .review-text{
+        margin: 0;
+        font-size: 16px;
+    }
+    .trade-img{
+        top: -20px;
+        left: 0;
+    }
+    .trade-img img{
+        width: 500px;
+        height: 500px;
+    }
+    .trade-title{
+        font-size: 30px;
+    }
+    .trade-btn{
+        margin-bottom: 50px;
+    }
+    .footer-item{
+        margin-left: 20px;
+    }
+    .social-img{
+        margin-left: 15px;
+    }
+
+}
+@media (max-width: 992px){
+    .header{
+        margin: 15px 15px; 
+    }
+    .menu-item{
+        margin-right: 15px;
+        font-size: 15px;
+    }
+ 
+    .calculator-container{
+        width: 70%;
+    }
+
+    .change-button{
+        margin-left: 30px;
+    }
+    .login-button{
+        font-size: 15px;
+        margin-right: 10px;
+    }
+    .register-button{
+        font-size: 15px;
+        padding: 15px 10px;
+    }
+    .title{
+        font-size: 50px;
+    }
+    .card-image{
+        width: 100px;
+        height: 100px;
+    }
+    .card-title{
+        margin: 15px 0;
+    }
+    .card-text{
+        font-size: 16px;
+    }
+    .exchange{
+        width: 90%;
+    }
+    .exchange-image img{
+        width: 300px;
+    }
+    .exchange-title{
+        font-size: 25px;
+    }
+    .exchange-p{
+        font-size: 16px;
+    }
+    .exchange-text{
+        margin-left: 10%;
+    }
+    .reserve-title{
+        margin: 30px 0;
+    }
+    .valute-card{
+        width: 300px;
+        height: 70px;
+        margin-bottom: 10px;
+
+    }
+    .trade-contant{
+        margin-right: 50px;
+    }
+    .trade-img{
+        left: -9%;
+    }
+    .footer-logo{
+        display: none;
+    }
+    .trade-container{
+        margin-bottom: 0px;
+    }
+    .lets-trade{
+        margin-bottom: 0;
+    }
+    .footer-text{
+        display: none;
+    }
+    .footer{
+        margin: 40px 0;
+    }
+
+}
+@media (max-width: 768px){
+    .header{
+        margin: 20px 10%;
+        position: relative;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
+    .menu-item{
+        margin: 0;
+        margin-top: 10px;
+    }
+    .topnav{
+        margin-left: 3%;
+        display: none;
+        flex-direction: column-reverse;
+        justify-content: space-between;
+    }
+    .login{
+        display: flex;
+        flex-direction: column;
+        order: 1;
+        border-bottom: 2px solid rgba(214,220,226, 0.75);
+        margin-left: 20px;
+    }
+    .login-button{
+        margin: 0;
+        margin-top: 15px;
+        padding: 0;
+        text-align: start;
+        font-size: 18px;
+    }
+    .register-button{
+        margin-top: 10px;
+        margin-bottom: 10px;
+        padding: 0;
+        background: inherit;
+        font-weight: normal;
+        font-size: 18px;
+    }
+    .menu{
+        display: flex;
+        flex-direction: column;
+        order: 0;
+    }
+    .menu-item{
+        text-align: start;
+        font-size: 18px;
+    }
+    .menu-icon{
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+    .title{
+        font-size: 40px;
+    }
+    .calculator-container{
+        width: 80%;
+    }
+    .calculator{
+        padding: 0;
+        justify-content: center;
+        align-items: center;
+    }
+    .change-button{
+        margin-left: 0;
+        margin-bottom: 20px;
+    }
+    .change-icon{
+        width: 126px;
+    }
+    .valute{
+        flex-wrap: wrap;
+    }
+    .you-give{
+        justify-content: center;
+    }
+    .you-get{
+        justify-content: center;
+    }
+    .advantages{
+        flex-direction: column;
+        align-items: center;
+    }
+    .card{
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        width: 400px;
+        align-items: center;
+    }
+    .card-text{
+        text-align: center;
+    }
+    .exchange{
+        width: 100%;
+    }
+    .exchange-contant{
+        flex-direction: column-reverse;
+    }
+    .exchange-image{
+        margin-top: 50px;
+    }
+    .valute-cards{
+        justify-content: space-around;
+    }
+    .valute-card{
+        width: 250px;
+    }
+    .valute-card:nth-last-child(-n+5){
+        display: none;
+    }
+    .valute-btn{
+        display: block;
+        border: none;
+        width: 300px;
+        background-color: inherit;
+        justify-self: center;
+        text-align: center;
+    }
+    .review-cards{
+        justify-content: center;
+    }
+    .review-card{
+        flex: 0.8;
+    }
+    .review-card:last-child{
+        display: none;
+    }
+    .name{
+        margin-bottom: 50px;
+    }
+    .lets-trade{
+        justify-content: center;
+    }
+    .trade-title{
+        text-align: center;
+        margin: 0;
+        margin-top: 20px;
+    }
+    .trade-text{
+        text-align: center;
+    }
+    .trade-contant{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex: 0.7;
+        margin: 0;
+    }
+    
+    .trade-img{
+        display: none;
+    }
+    .footer{
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer-items{
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+    }
+    .footer-item{
+        margin: 0;
+    }
+    .social{
+        margin-top: 20px;
+        align-self: flex-start;
+    }
+    .social-img{
+        margin-left: 20px;
+    }
+    
+}
+@media (max-width: 576px){
+    .container{
+        width: 90%;
+    }
+    .header{
+        margin: 20px 5%;
+    }
+    .title{
+        font-size: 30px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    .calculator-container{
+        width: 100%;
+    }
+    .card{
+        width: auto;
+    }
+    .summ{
+        width: 140px;
+    }
+    .calc-title span{
+        display: block;
+        margin: 0;
+        margin-top: 5px;
+    }
+    .reserve-title{
+        font-size: 25px;
+    }
+    .review-title{
+        font-size: 25px;
+    }
+    .trade-title{
+        font-size: 25px;
+    }
+    .trade-text{
+        font-size: 16px;
+    }
+    .trade-container{
+        width: 100%;
+    }
+    .footer{
+        flex-direction: row;
+        margin-bottom: 20px;
+    }
+    .social{
+        margin: 0;
+    }
+    .footer-items{
+        flex-direction: column;
+        flex: 0.5;
+    }
+    .footer-item{
+        margin-bottom: 10px;
+        font-size: 16px;
+    }
 }
